--- a/definition.yml
+++ b/definition.yml
@@ -1,5 +1,6 @@
 id: scorpius
 docker_repository: dynverse/ti_scorpius
+singularity_collection: 1575
 container_url: https://github.com/dynverse/ti_scorpius
 name: SCORPIUS
 type: algorithm
