--- a/definition.yml
+++ b/definition.yml
@@ -3,7 +3,7 @@ docker_repository: dynverse/ti_scorpius
 singularity_collection: 1575
 container_url: https://github.com/dynverse/ti_scorpius
 name: SCORPIUS
-type: algorithm
+source: tool
 implementation_id: scorpius
 doi: 10.1101/079509
 google_scholar_cluster_id: '7752629025700865018'
