--- a/definition.yml
+++ b/definition.yml
@@ -1,22 +1,50 @@
-id: scorpius
-docker_repository: dynverse/ti_scorpius
-singularity_collection: 1575
-container_url: https://github.com/dynverse/ti_scorpius
-name: SCORPIUS
-source: tool
-implementation_id: scorpius
-doi: 10.1101/079509
-google_scholar_cluster_id: '7752629025700865018'
-platform: R
-trajectory_types:
-- linear
-topology_inference: fixed
-license: GPL-3
-preprint_date: '2016-10-07'
-code_url: https://github.com/rcannood/SCORPIUS
+method:
+  id: scorpius
+  name: SCORPIUS
+  tool_id: scorpius
+  source: tool
+  platform: R
+  url: https://github.com/rcannood/SCORPIUS
+  license: GPL-3
+  authors:
+  - given: Robrecht
+    family: Cannoodt
+    email: rcannood@gmail.com
+    ORCID: 0000-0003-3641-729X
+    github: rcannood
+  - given: Wouter
+    family: Saelens
+    email: wouter.saelens@ugent.be
+    ORCID: 0000-0002-7114-6248
+    github: zouter
+  - given: Yvan
+    family: Saeys
+    email: yvan.saeys@ugent.be
+    github: saeyslab
+
+
+manuscript:
+  doi: 10.1101/079509
+  google_scholar_cluster_id: '7752629025700865018'
+  preprint_date: '2016-10-07'
+
+container:
+  url: https://github.com/dynverse/ti_scorpius
+  docker: dynverse/ti_scorpius
+
+wrapper:
+  type: linear_trajectory
+  topology_inference: fixed
+  trajectory_types:
+  - linear
+  example: /code/example.R
+  input_required:
+  - expression
+
+
 parameters:
-  distance_method:
-    type: discrete
+  - id: distance_method
+    type: character
     default: spearman
     values:
     - spearman
@@ -25,76 +53,60 @@ parameters:
     description: |-
       A character string indicating which correlation
       coefficient (or covariance) is to be computed. One of "pearson", "kendall", or "spearman".
-  ndim:
+  - id: ndim
     type: integer
     default: 3
-    upper: 20
-    lower: 2
+    distribution:
+      type: uniform
+      upper: 20
+      lower: 2
     description: The number of dimensions in the new space.
-  k:
+  - id: k
     type: integer
     default: 4
-    upper: 20
-    lower: 1
+    distribution:
+      type: uniform
+      upper: 20
+      lower: 1
     description: The number of clusters to cluster the data into.
-  thresh:
+  - id: thresh
     type: numeric
     default: 0.001
-    upper: 100000.0
-    lower: 1.0e-05
-    distribution: expuniform
+    distribution:
+      type: expuniform
+      upper: 100000.0
+      lower: 1.0e-05
     description: '\code{\link[princurve]{principal_curve}} parameter: convergence
       threshhold on shortest distances to the curve'
-  maxit:
+  - id: maxit
     type: integer
     default: 10
-    upper: 50
-    lower: 0
+    distribution:
+      type: uniform
+      upper: 50
+      lower: 0
     description: '\code{\link[princurve]{principal_curve}} parameter: maximum number
       of iterations'
-  stretch:
+  - id: stretch
     type: numeric
     default: 0.0
-    upper: 5.0
-    lower: 0.0
+    distribution:
+      type: uniform
+      upper: 5.0
+      lower: 0.0
     description: '\code{\link[princurve]{principal_curve}} parameter: a factor by
       which the curve can be extrapolated when points are projected'
-  smoother:
-    type: discrete
+  - id: smoother
+    type: character
     default: smooth_spline
     values:
     - smooth_spline
     - lowess
     - periodic_lowess
     description: '\code{\link[princurve]{principal_curve}} parameter: choice of smoother'
-  sparse:
+  - id: sparse
     type: logical
     default: yes
     description: |-
       Whether or not to use sparse MDS dimensionality reduction,
       for datasets with large amounts of cells.
-input:
-  format: rds
-  required: expression
-output:
-  format: rds
-  outputs:
-  - linear_trajectory
-  - dimred
-  - timings
-wrapper_type: linear_trajectory
-authors:
-- given: Robrecht
-  family: Cannoodt
-  email: rcannood@gmail.com
-  ORCID: 0000-0003-3641-729X
-  github: rcannood
-- given: Wouter
-  family: Saelens
-  email: wouter.saelens@ugent.be
-  ORCID: 0000-0002-7114-6248
-  github: zouter
-- given: Yvan
-  family: Saeys
-  email: yvan.saeys@ugent.be
-  github: saeyslab
