--- a/definition.yml
+++ b/definition.yml
@@ -35,12 +35,8 @@ container:
 wrapper:
   type: linear_trajectory
   topology_inference: fixed
-  trajectory_types:
-  - linear
-  example: /code/example.R
-  input_required:
-  - expression
-
+  trajectory_types: linear
+  input_required: expression
 
 parameters:
   - id: distance_method
