update R wrapper package

--- a/package/inst/definition.yml
+++ b/package/inst/definition.yml
@@ -32,6 +32,10 @@ container:
   url: https://github.com/dynverse/ti_scorpius
   docker: dynverse/ti_scorpius
 
+package:
+  remote: tiscorpius=dynverse/ti_scorpius/package
+  function: ti_scorpius
+
 wrapper:
   type: linear_trajectory
   topology_inference: fixed
