--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ dist: trusty
 sudo: true
 os:
 - linux
-cache: packages
+cache:
+  directories:
+    - $HOME/R/Library
 services:
 - docker
 before_install:
@@ -11,6 +13,12 @@ before_install:
   -in credentials.enc -out credentials -d
 - source credentials
 - source <(curl -sSL https://raw.githubusercontent.com/dynverse/travis_scripts/master/helper.sh)
+- git clone --branch cache-master https://github.com/dynverse/travis_package_cacher.git
+- cd travis_package_cacher
+- cat cache.tar.gz.part-* > cache.tar.gz
+- tar -zxvf cache.tar.gz
+- rm cache.tar*
+- mv * $HOME/R/Library/
 install:
 - set -e
 - update_docker
