use install_dynverse

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,7 @@ before_install:
   -in credentials.enc -out credentials -d
 - source credentials
 - source <(curl -sSL https://raw.githubusercontent.com/dynverse/travis_scripts/master/helper.sh)
-- git clone --branch cache-master https://github.com/dynverse/travis_package_cacher.git
-- pushd travis_package_cacher
-- cat cache.tar.gz.part-* > cache.tar.gz
-- tar -zxf cache.tar.gz
-- rm cache.tar*
-- mv * $HOME/R/Library/
-- popd
+- install_dynverse
 install:
 - set -e
 - update_docker
