--- a/package/DESCRIPTION
+++ b/package/DESCRIPTION
@@ -2,8 +2,8 @@ Package: tiscorpius
 Type: Package
 Title: A dynverse wrapper of SCORPIUS
 Version: 1.0.0.01
-Author@R: person("Robrecht", "Cannoodt", email="rcannood@gmail.com", role="aut"),
-  person("Wouter", "Saelens", email="wouter.saelens@gmail.com", role=c("cre", "aut"))
+Authors@R: c(person("Robrecht", "Cannoodt", email="rcannood@gmail.com", role="aut"),
+  person("Wouter", "Saelens", email="wouter.saelens@gmail.com", role=c("cre", "aut")))
 Description: A dynverse wrapper of SCORPIUS
 License: GPL-3
 Encoding: UTF-8
@@ -17,3 +17,5 @@ RoxygenNote: 6.1.1
 Suggests: 
     testthat,
     dyntoy
+Remotes:
+  dynverse/dynwrap
